test/conformance/kuttl/validate/clusterpolicy/standard/enforce/resource-apply-block/02-script.yaml
## Checks that the manifests.yaml file CANNOT be successfully created. If it can, fail the test as this is incorrect.

apiVersion: kuttl.dev/v1beta1
kind: TestStep
commands:
- script: |
    if kubectl apply -f resource.yaml
    then 
      echo "Tested failed. Resource was allowed."
      exit 1 
    else 
      echo "Test succeeded. Resource was blocked."
      exit 0
    fi
